# viet-itn

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: api.py  normalize.py
src/cache/: vi_itn_lower_cased.far  whitelist.tsv
src/inverse_text_normalization/: __init__.py  inverse_normalize.py
src/inverse_text_normalization/vi/: __init__.py
src/inverse_text_normalization/vi/data/: whitelist.tsv
src/inverse_text_normalization/vi/taggers/: cardinal.py  date.py  decimal.py  electronic.py  fraction.py  measure.py  money.py  ordinal.py  punctuation.py  telephone.py  time.py  tokenize_and_classify.py  whitelist.py  word.py
src/inverse_text_normalization/vi/verbalizers/: cardinal.py  date.py  decimal.py  electronic.py  fraction.py  measure.py  money.py  ordinal.py  telephone.py  time.py  verbalize.py  verbalize_final.py  whitelist.py  word.py
viet_itn/: cli.py  normalize.py
