[project]
name = "viet-itn"
version = "0.1.0"
description = "Vietnamese Inverse Text Normalizer"
authors = [
    { name = "Sam Dang", email = "dangvansam98@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "nemo-text-processing>=1.1.0",
    "pynini>=2.1.6.post1",
    "uvicorn",
]

[project.scripts]
viet-itn = "src:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
