[project]
name = "viet-itn"
version = "0.1.0"
description = "Vietnamese Inverse Text Normalizer"
authors = [
    { name = "Sam Dang", email = "dangvansam98@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chopdiff>=0.2.1",
    "fastapi",
    "nemo-text-processing>=1.1.0",
    "pynini>=2.1.6.post1",
    "uvicorn",
    "vinorm>=2.0.7",
]

[project.scripts]
viet-itn = "src:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
